force-app/main/default/objects/Case_Time__c/Case_Time__c.object-meta.xml
<CustomObject>
    <label>Time(Case)</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Time(Case) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>