force-app/main/default/objects/Case_Time__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the Time entry is a billable entry.</description>
    <inlineHelpText>When checked, indicates this is a billable Time entry. If this is not a billable entry, you must enter a reason why the time is not billable.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>