force-app/main/default/objects/Case_Time__c/fields/Charge_to_Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Charge_to_Functional_Group__c</fullName>
    <description>Picklist to capture the Charge To functional group for this Time entry. Not all Time entries will require a department.</description>
    <label>Charge to Functional Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>