force-app/main/default/objects/Case_Time__c/fields/Effort_Date__c.field-meta.xml
<CustomField>
    <fullName>Effort_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Effort Date field will be used to track the date when the effort was made.</description>
    <label>Effort Date</label>
    <type>Date</type>
</CustomField>