force-app/main/default/objects/Case_Time__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of hours</description>
    <inlineHelpText>Number of hours for this Time entry. This field only allows whole numbers. To enter minutes, use the Minutes field.</inlineHelpText>
    <label>Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>