force-app/main/default/objects/Case_Time__c/fields/Not_Billable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Billable_Reason__c</fullName>
    <description>Captures the reason why the Billable is set to False (Unchecked)</description>
    <inlineHelpText>Select the reason why this Time entry is not billable.</inlineHelpText>
    <label>Not Billable Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billable__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Defined Agreement</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>