force-app/main/default/objects/Case_Time__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Captures brief notes about this Time entry.</description>
    <inlineHelpText>Enter a brief description if necessary to describe this Time entry. This should only be used on an exception basis to capture information about a Time entry. You are limited to 255 characters.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>