force-app/main/default/objects/Case_Time__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User object. Stores the user associated to this Time record. This is field allows a Time entry to be created by a user on behalf of someone else. Defaults to the currently logged in user when creating a new record.</description>
    <inlineHelpText>Resource associated to this Time entry. Only change this value if you are entering time on behalf of another user, otherwise leave the default.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time</relationshipName>
    <type>Lookup</type>
</CustomField>