force-app/main/default/objects/Case_Time__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Indicates which level of support this user is associated to.</description>
    <inlineHelpText>This field is automatically defaulted when a new Time record is created based on the User&apos;s Tier setting.</inlineHelpText>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier1</fullName>
            </value>
            <value>
                <fullName>Tier2</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>