force-app/main/default/objects/Case_Time__c/fields/Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes__c</fullName>
    <description>Calculate the total Minutes using the Hours and Minutes field.</description>
    <formula>IF(Hours__c &gt; 0, (Hours__c *60) + Minutes__c, Minutes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time spent in minutes. Adds the Hours and Minutes fields together.</inlineHelpText>
    <label>Total Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>