force-app/main/default/objects/Case_Time__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of time that was spent.</description>
    <inlineHelpText>Select the type of time spent for this Time entry. If you need to enter multiple Types, create an additional Time entry.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
                <default>true</default>
                <label>Support</label>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Guidance</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>