force-app/main/default/objects/Case_Time__c/fields/Valid_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Valid_Minutes__c</fullName>
    <description>Formula field used in Validation Rule to enforce only specific values in the Minutes field. This field should not be displayed on any page layouts.</description>
    <formula>CASE(Minutes__c, 0, &quot;True&quot;, 15, &quot;True&quot;, 30, &quot;True&quot;, 45, &quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Minutes</label>
    <type>Text</type>
</CustomField>