force-app/main/default/objects/Case_Time__c/validationRules/Total_Time_Must_be_Greater_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Time_Must_be_Greater_Than_0</fullName>
    <active>true</active>
    <description>Total Time entered must be greater than 0.</description>
    <errorConditionFormula>Total_Minutes__c &lt; 1</errorConditionFormula>
    <errorMessage>The total time spent must be greater than 0. Please either Hours, Minutes or both that are greater than 0 (zero).</errorMessage>
</ValidationRule>