force-app/main/default/objects/Case_Time__c/validationRules/Validate_Minutes_Entry.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Minutes_Entry</fullName>
    <active>true</active>
    <description>Total Time entered must be greater than 0.</description>
    <errorConditionFormula>Valid_Minutes__c = &quot;False&quot;</errorConditionFormula>
    <errorMessage>Determines if the Minutes entered are valid - only 0, 15, 30 and 45 are valid entries.</errorMessage>
</ValidationRule>